# dp.cli

./: README.md  dp.cli.cabal
src/: Hand.hs  Main.hs
test/: Test.hs
