Name:		dpcli
Version:	0.1
Description:	Daemon Poker command line interface 
Author:	  Daemon <d@daemonpoker.com>	
Build-Type:	Simple
Cabal-Version:	>= 1.9.2
Executable dp
  hs-source-dirs: src
  Main-is:		Main.hs
  Build-Depends:	base
                  , HUnit, test-framework, test-framework-hunit, vector

  GHC-Options: -O2 -Wall

Test-Suite dp-test-suite
  Type: exitcode-stdio-1.0
  hs-source-dirs: test, src
  Main-is: Test.hs
  Build-Depends: base, HUnit, vector, test-framework, test-framework-hunit
